# LABA_6_OOP

./: CMakeLists.txt  README.md  calc.cpp  calc.h  calc_tests.cpp  date.cpp  date.h  date_tests.cpp  employee.cpp  employee.h  employee_tests.cpp
